--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-waypoint": "^10.3.0",
-    "sass": "^1.77.4"
+    "sass": "^1.77.4",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "eslint": "^8",
