--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.10.2",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
+    "react-slider": "^2.0.6",
     "react-waypoint": "^10.3.0",
     "sass": "^1.77.4",
     "swiper": "^11.1.4"
