--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.10.2",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
+    "react-rating-stars-component": "^2.2.0",
     "react-select": "^5.8.0",
     "react-slider": "^2.0.6",
     "react-waypoint": "^10.3.0",
