--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
+    "react-countdown": "^2.3.5",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-rating-stars-component": "^2.2.0",
