--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@tinymce/tinymce-react": "^5.1.1",
+    "apexcharts": "^3.49.2",
     "bootstrap": "^5.3.3",
-    "chart.js": "^4.4.3",
     "next": "14.2.3",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.2",
-    "react-chartjs-2": "^5.2.0",
     "react-countdown": "^2.3.5",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
