--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "react-bootstrap": "^2.10.2",
     "react-countdown": "^2.3.5",
     "react-countup": "^6.5.3",
+    "react-datepicker": "^7.2.0",
     "react-dom": "^18",
     "react-rating-stars-component": "^2.2.0",
     "react-select": "^5.8.0",
     "react-slider": "^2.0.6",
     "react-waypoint": "^10.3.0",
     "sass": "^1.77.4",
-    "swiper": "^11.1.4"
+    "swiper": "^11.1.4",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "eslint": "^8",
